  there is the end of the (internal) buffer just in between a '??/' and a '\n'.

-------------------------------------------------------------------------------

CHANGELOG

Boost V1.51.0
 - Fixed #7050: Invalid memory write bug in lexing_exception
 - Fixed #7159: Text-lines are processed as if they were preprocessing directives

Boost V1.50.0
 - V2.3.2
 - Fixed #6758: not all members are initialized by base_iteration_context
   constructor.
 - Fixed #6838: Adding include file with force_include makes Wave fail to emit
   #line directive
 - Added support for test of --forceinclude option to testwave executable,
   added test case verifying #6838 is fixed.
 - Fixed #6870: build wave driver failed

Boost V1.48.0
 - V2.3.1
 - Added the flag support_option_emit_contnewlines allowing to control whether
   backslash newline sequences are emitted by the Wave library. The default is
   as before: these tokens will be silently ignored (after the token positions
   have been properly updated). Note: this option is supported by the SLex lexer
   module only.
 - Fixed #5887: flex_string.hpp needs to include <ios>

Boost V1.47.0
- V2.3.0
- After preprocessing the body of any #pragma wave option() the wave tool now
  concatenates all adjacent string literals into a single string literal.
- Fixed whitespace handling, added a corresponding set of test cases
  (t_9_020.cpp)
- Added a new preprocessing hook: locate_include_file allowing to customize the
  way include files are located.
- Added new command line option --noexpand/-N to the Wave driver allowing to
  suppress macro expansion for a given macro name (works for both, object like
  and function like macros). This option has to be used very carefully as it
  not only leaves the whole macro invocation untouched in the generated output
  but also removes this macro from consideration for Wave itself. This can
  cause unexpected results if the suppressed macro would influence #ifdef's
  later on.