@@ -1,7 +1,7 @@
 /*=============================================================================
     Boost.Wave: A Standard compliant C++ preprocessor library
     Definition of the various language support constants
-    
+
     http://www.boost.org/
 
     Copyright (c) 2001-2012 Hartmut Kaiser. Distributed under the Boost
@@ -33,9 +33,10 @@ enum language_support {
 //  support flags for C99
     support_option_variadics = 0x04,
     support_c99 = support_option_variadics | support_option_long_long | 0x08,
-#endif 
+#endif
 #if BOOST_WAVE_SUPPORT_CPP0X != 0
     support_cpp0x = support_option_variadics | support_option_long_long | 0x10,
+    support_cpp11 = support_cpp0x,
 #endif
 
     support_option_mask = 0xFFB0,
@@ -52,29 +53,29 @@ enum language_support {
 };
 
 ///////////////////////////////////////////////////////////////////////////////
-//  
+//
 //  need_cpp
 //
 //      Extract, if the language to support is C++98
 //
 ///////////////////////////////////////////////////////////////////////////////
 inline bool
-need_cpp(language_support language) 
+need_cpp(language_support language)
 {
     return (language & ~support_option_mask) == support_cpp;
 }
 
 ///////////////////////////////////////////////////////////////////////////////
-//  
+//
 //  need_cpp0x
 //
-//      Extract, if the language to support is C++0x
+//      Extract, if the language to support is C++11
 //
 ///////////////////////////////////////////////////////////////////////////////
 #if BOOST_WAVE_SUPPORT_CPP0X != 0
 
 inline bool
-need_cpp0x(language_support language) 
+need_cpp0x(language_support language)
 {
     return (language & ~support_option_mask) == support_cpp0x;
 }
@@ -82,7 +83,7 @@ need_cpp0x(language_support language)
 #else
 
 inline bool
-need_cpp0x(language_support language) 
+need_cpp0x(language_support language)
 {
     return false;
 }
@@ -91,14 +92,14 @@ need_cpp0x(language_support language)
 
 #if BOOST_WAVE_SUPPORT_VARIADICS_PLACEMARKERS != 0
 ///////////////////////////////////////////////////////////////////////////////
-//  
+//
 //  need_c99
 //
 //      Extract, if the language to support is C99
 //
 ///////////////////////////////////////////////////////////////////////////////
 inline bool
-need_c99(language_support language) 
+need_c99(language_support language)
 {
     return (language & ~support_option_mask) == support_c99;
 }
@@ -106,8 +107,8 @@ need_c99(language_support language)
 #else  // BOOST_WAVE_SUPPORT_VARIADICS_PLACEMARKERS != 0
 
 ///////////////////////////////////////////////////////////////////////////////
-inline bool 
-need_variadics(language_support language) 
+inline bool
+need_variadics(language_support language)
 {
     return false;
 }
@@ -121,7 +122,7 @@ enable_variadics(language_support language, bool enable = true)
 
 //////////////////////////////////////////////////////////////////////////////
 inline bool
-need_c99(language_support language) 
+need_c99(language_support language)
 {
     return false;
 }
@@ -129,7 +130,7 @@ need_c99(language_support language)
 #endif // BOOST_WAVE_SUPPORT_VARIADICS_PLACEMARKERS != 0
 
 ///////////////////////////////////////////////////////////////////////////////
-//  
+//
 //  get_support_options
 //
 //      Set preserve comments support in the language to support
@@ -142,7 +143,7 @@ get_support_options(language_support language)
 }
 
 ///////////////////////////////////////////////////////////////////////////////
-//  
+//
 //  set_support_options
 //
 //      Set language option (for fine tuning of lexer behavior)
@@ -178,7 +179,7 @@ set_support_options(language_support language, language_support option)
     BOOST_WAVE_NEED_OPTION(option)                                            \
     BOOST_WAVE_ENABLE_OPTION(option)                                          \
     /**/
-    
+
 ///////////////////////////////////////////////////////////////////////////////
 BOOST_WAVE_OPTION(long_long)                // support_option_long_long
 BOOST_WAVE_OPTION(no_character_validation)  // support_option_no_character_validation
@@ -192,7 +193,7 @@ BOOST_WAVE_OPTION(include_guard_detection)  // support_option_include_guard_dete
 #endif
 #if BOOST_WAVE_SUPPORT_VARIADICS_PLACEMARKERS != 0
 BOOST_WAVE_OPTION(variadics)                // support_option_variadics
-#endif 
+#endif
 #if BOOST_WAVE_EMIT_PRAGMA_DIRECTIVES != 0
 BOOST_WAVE_OPTION(emit_pragma_directives)   // support_option_emit_pragma_directives
 #endif
@@ -205,7 +206,7 @@ BOOST_WAVE_OPTION(emit_contnewlines)        // support_option_emit_contnewlines
 
 ///////////////////////////////////////////////////////////////////////////////
 }   // namespace wave
-}   // namespace boost 
+}   // namespace boost
 
 // the suffix header occurs after all of the code
 #ifdef BOOST_HAS_ABI_HEADERS
