@@ -287,7 +287,7 @@ enum token_id {
 // import is needed to be a keyword for the C++ module Standards proposal
     T_IMPORT       = TOKEN_FROM_ID(421, KeywordTokenType),
 
-// C++0x keywords
+// C++11 keywords
     T_ALIGNAS      = TOKEN_FROM_ID(422, KeywordTokenType),
     T_ALIGNOF      = TOKEN_FROM_ID(423, KeywordTokenType),
     T_CHAR16_T     = TOKEN_FROM_ID(424, KeywordTokenType),
